app/dealer/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dealer-api
spec:
  # https://argoproj.github.io/argo-cd/user-guide/best_practices/#leaving-room-for-imperativeness
  # replicas: 2
  revisionHistoryLimit: 5
  minReadySeconds: 20
  selector:
    matchLabels:
      app: dealer-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      # annotations:
      # prometheus.io/scrape: 'true'
      # prometheus.io/path: '/api/versions'
      # prometheus.io/port: '3000'
      labels:
        app: dealer-api
    spec:
      terminationGracePeriodSeconds: 30
      # readinessGates:
      # - conditionType: >-
      # target-health.alb.ingress.k8s.aws/dealer-api_dealer-api_3000
      containers:
      - name: dealer-api
        ports:
        - containerPort: 3000
        image: 289952279049.dkr.ecr.ap-northeast-2.amazonaws.com/chekt/dealer-api
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "500m"
            memory: "800Mi"
            ephemeral-storage: "2Gi"
          limits:
            cpu: "1000m"
            memory: "900Mi"
            ephemeral-storage: "3Gi"
        readinessProbe:
          httpGet:
            path: /api/versions
            port: 3000
          failureThreshold: 2
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          failureThreshold: 2
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /cache
          name: config-cache
        # - mountPath: /hostdir
        # name: host-vol
        # - mountPath: /pconfig
        # name: pvol
      volumes:
      - name: config-cache
        emptyDir: {}
      # - name: host-vol
      # hostPath:
      #  path: /tmp
      #  type: Directory
      # - name: pvol
      # persistentVolumeClaim:
      # claimName: ebs-config
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: api-node
        # affinity:
        #  nodeAffinity:
        #    requiredDuringSchedulingIgnoredDuringExecution:
        #      nodeSelectorTerms:
        #      - matchExpressions:
        #        - key: app-key
        #          operator: In
        #          values:
        #          - dealer
