app/dealer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dealer-api
spec:
  type: NodePort
  selector:
    app: dealer-api
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
